package Lab4;

public interface Changable {
    String toChange();
}
