package Lab4;

public interface Clingable {

    String toCling(String s);
}
