package Lab4;

public interface Destroyable {

    String toDestroy();
}
