package Lab4;

public interface Rememberable {

    String toRemember(String s);
}
