package Lab4;

public interface Returnable {

    String toReturn(String s);
}
