package Lab4;

public interface Surroundable {
    void toSurround(Troll t, String s);
}
