package Lab4;

public interface Thinkable {

    String toThink(String s);
}
