package Lab4;

public interface Watchable {

    String toWatch(String s);
}
